<resources>
    <string name="app_name">GymFit</string>
    <string name="reset_password">Reset Password</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="workout_list">Workout List</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup">Signup</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="reset">Reset</string>
    <string name="choose_username">Choose Username</string>
    <string name="choose_password">Choose Password</string>
    <string name="create_account">Create Account</string>
    <string name="user">User:</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="back">Back</string>
</resources>